--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>实时进校码</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         /* 基本页面设置，使其全屏显示 */
         html,
@@ -122,5 +123,6 @@
     </script>
 
 </body>
+
 
 </html>
