--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>实时进校码</title>
     <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="进校码">
+    <link rel="apple-touch-icon" href="./jinxiaoma.png">
     <style>
         /* 基本页面设置，使其全屏显示 */
         html,
@@ -126,3 +130,4 @@
 
 
 </html>
+
