Add manifest link and fix HTML encoding1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="进校码">
     <link rel="apple-touch-icon" href="./jinxiaoma.png">
+    <link rel="manifest" href="manifest.json">
+
 
     <style>
         /* 基本页面设置，使其全屏显示 */
@@ -130,3 +132,4 @@
 </body>
 
 </html>
+
