--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>实时进校码</title>
-    
+
+    <!-- PWA 全屏与图标支持 -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="进校码">
     <link rel="apple-touch-icon" href="./jinxiaoma.png">
 
     <style>
-        /* 基本页面设置，使其全屏显示 */
+        /* ========== 全屏基础设置 ========== */
         html,
         body {
             margin: 0;
@@ -20,70 +21,76 @@
             height: 100%;
             width: 100%;
             overflow: hidden;
-            /* 防止滚动 */
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: black;
+            
+            /* iPhone Safari 全屏安全区适配 */
+            padding-top: env(safe-area-inset-top);
+            padding-bottom: env(safe-area-inset-bottom);
+            padding-left: env(safe-area-inset-left);
+            padding-right: env(safe-area-inset-right);
         }
 
-        /* 背景容器 */
+        /* ========== 背景容器 ========== */
         #background-container {
-            width: 100%;
-            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+
             background-image: url('./jinxiaoma.png');
-            /* 设置背景图片 */
-            background-size: contain;
-            /* 保证图片完整显示 */
+            background-size: contain; /* 或 cover，根据是否希望图片铺满裁剪 */
             background-repeat: no-repeat;
             background-position: center;
-            background-color: #f0f0f0;
-            /* 图片外的背景色 */
-            position: relative;
-            /* 关键：用于定位内部的文本元素 */
+            background-color: #000; /* 边缘颜色与图片融合 */
+
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        /* 修复背景在某些移动浏览器上的显示问题 */
+        /* 内容容器（文字定位区） */
         .content-wrapper {
-            max-width: 450px;
-            /* 根据图片常见宽度设定一个最大宽度 */
             width: 100%;
             height: 100%;
+            max-width: 450px;
             position: relative;
         }
 
-        /* 页面中间的实时时钟 */
+        /* ========== 中间时间文字 ========== */
         #center-clock {
             position: absolute;
             top: 47%;
-            /* 垂直位置微调，放在名字和二维码中间 */
             left: 50%;
             transform: translate(-50%, -50%);
             color: black;
             font-size: 1.4rem;
-            /* 字体大小，可根据需要调整 */
             font-weight: bold;
             text-align: center;
             white-space: nowrap;
-            /* 防止换行 */
         }
 
-        /* 左下角的预约日期 */
+        /* ========== 左下角日期 ========== */
         #bottom-left-date {
             position: absolute;
             bottom: 6.2%;
-            /* 垂直位置微调，使其覆盖在原图的预约时间上 */
             left: 40%;
             transform: translate(-50%, -50%);
             color: white;
             font-size: 1.1rem;
-            /* 字体大小，可根据需要调整 */
             font-weight: 500;
-            /* background-color: #00468c; */
-            /* 用与原图匹配的背景色来覆盖旧文字 */
-            padding: 2px 8px;
-            /* 增加一点内边距以完全覆盖 */
             white-space: nowrap;
+        }
+
+        /* iPhone Safari 横屏安全区适配 */
+        @supports (padding: max(0px)) {
+            body {
+                padding-top: max(env(safe-area-inset-top), 0px);
+                padding-bottom: max(env(safe-area-inset-bottom), 0px);
+                padding-left: max(env(safe-area-inset-left), 0px);
+                padding-right: max(env(safe-area-inset-right), 0px);
+            }
         }
     </style>
 </head>
@@ -93,7 +100,6 @@
     <div id="background-container">
         <div class="content-wrapper">
             <div id="center-clock"></div>
-
             <div id="bottom-left-date"></div>
         </div>
     </div>
@@ -101,11 +107,8 @@
     <script>
         function updateTime() {
             const now = new Date();
-
-            // 格式化函数：确保月份、日期、小时等总是两位数
             const pad = (num) => num.toString().padStart(2, '0');
 
-            // 1. 设置页面中间的完整日期和时间
             const year = now.getFullYear();
             const month = pad(now.getMonth() + 1);
             const day = pad(now.getDate());
@@ -113,24 +116,19 @@
             const minutes = pad(now.getMinutes());
             const seconds = pad(now.getSeconds());
 
+            // 中间时间
             const centerClockString = `${year}年${month}月${day}日 ${hours}:${minutes}:${seconds}`;
             document.getElementById('center-clock').textContent = centerClockString;
 
-            // 2. 设置左下角的预约日期
+            // 左下角日期
             const bottomLeftDateString = `${month}-${day}`;
             document.getElementById('bottom-left-date').textContent = bottomLeftDateString;
         }
 
-        // 页面加载时立即执行一次，避免看到空白
         updateTime();
-        // 每秒钟更新一次时间
         setInterval(updateTime, 1000);
     </script>
 
 </body>
 
 </html>
-
-
-
-
