--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             background-image: url('./jinxiaoma.png');
             background-size: contain; /* 或 cover，根据是否希望图片铺满裁剪 */
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: center 60%;
             background-color: #000; /* 边缘颜色与图片融合 */
 
             display: flex;
@@ -132,3 +132,4 @@
 </body>
 
 </html>
+
