--- a/index.html
+++ b/index.html
@@ -1,136 +1,117 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>实时进校码</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <title>实时进校码</title>
 
-    <!-- PWA 全屏与图标支持 -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="进校码">
-    <link rel="apple-touch-icon" href="./jinxiaoma.png">
+  <!-- iOS 全屏/PWA -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="进校码" />
+  <link rel="apple-touch-icon" href="./jinxiaoma.png" />
 
-    <style>
-        /* ========== 全屏基础设置 ========== */
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: black;
-            
-            /* iPhone Safari 全屏安全区适配 */
-            padding-top: env(safe-area-inset-top);
-            padding-bottom: env(safe-area-inset-bottom);
-            padding-left: env(safe-area-inset-left);
-            padding-right: env(safe-area-inset-right);
-        }
+  <style>
+    /* ============== 基础 ============== */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      /* 用接近背景边缘的蓝色，避免黑边感 */
+      background-color: #0b4da2;
+    }
 
-        /* ========== 背景容器 ========== */
-        #background-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+    /* ============== 背景容器 ============== */
+    #background-container {
+      position: fixed;
+      inset: 0;                    /* 顶、右、底、左全贴边 */
+      height: 100dvh;              /* 关键：动态视口高度，避免iOS工具栏造成空隙 */
+      /* 根据需要微调整体下移的程度：正值越大越靠下 */
+      --shift: 7vh;
 
-            background-image: url('./jinxiaoma.png');
-            background-size: contain; /* 或 cover，根据是否希望图片铺满裁剪 */
-            background-repeat: no-repeat;
-            background-position: center 65%;
-            background-color: #000; /* 边缘颜色与图片融合 */
+      background-image: url('./jinxiaoma.png');
+      background-repeat: no-repeat;
+      background-size: contain;    /* 保证整张证件图完整显示 */
+      background-position: center calc(50% + var(--shift));
+      /* 底色同样设为蓝色，图片比例不一致时看起来更自然 */
+      background-color: #0b4da2;
 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-        /* 内容容器（文字定位区） */
-        .content-wrapper {
-            width: 100%;
-            height: 100%;
-            max-width: 450px;
-            position: relative;
-        }
+    /* 内容层（覆盖在图上的文字） */
+    .content-wrapper {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      max-width: 450px;
+    }
 
-        /* ========== 中间时间文字 ========== */
-        #center-clock {
-            position: absolute;
-            top: 47%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: black;
-            font-size: 1.4rem;
-            font-weight: bold;
-            text-align: center;
-            white-space: nowrap;
-        }
+    /* 中部时间 */
+    #center-clock {
+      position: absolute;
+      top: 47%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #000;
+      font-size: 1.4rem;
+      font-weight: bold;
+      white-space: nowrap;
+      text-align: center;
+    }
 
-        /* ========== 左下角日期 ========== */
-        #bottom-left-date {
-            position: absolute;
-            bottom: 6.2%;
-            left: 40%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-size: 1.1rem;
-            font-weight: 500;
-            white-space: nowrap;
-        }
+    /* 左下角日期 */
+    #bottom-left-date {
+      position: absolute;
+      bottom: 6.2%;
+      left: 40%;
+      transform: translate(-50%, -50%);
+      color: #fff;
+      font-size: 1.1rem;
+      font-weight: 500;
+      white-space: nowrap;
+    }
 
-        /* iPhone Safari 横屏安全区适配 */
-        @supports (padding: max(0px)) {
-            body {
-                padding-top: max(env(safe-area-inset-top), 0px);
-                padding-bottom: max(env(safe-area-inset-bottom), 0px);
-                padding-left: max(env(safe-area-inset-left), 0px);
-                padding-right: max(env(safe-area-inset-right), 0px);
-            }
-        }
-    </style>
+    /* 大屏或 Pro Max 机型，略增下移量，让画面更居中 */
+    @media (min-height: 800px) {
+      #background-container { --shift: 9vh; }
+    }
+  </style>
 </head>
 
 <body>
-
-    <div id="background-container">
-        <div class="content-wrapper">
-            <div id="center-clock"></div>
-            <div id="bottom-left-date"></div>
-        </div>
+  <div id="background-container">
+    <div class="content-wrapper">
+      <div id="center-clock"></div>
+      <div id="bottom-left-date"></div>
     </div>
+  </div>
 
-    <script>
-        function updateTime() {
-            const now = new Date();
-            const pad = (num) => num.toString().padStart(2, '0');
+  <script>
+    function updateTime() {
+      const now = new Date();
+      const pad = (n) => n.toString().padStart(2, "0");
 
-            const year = now.getFullYear();
-            const month = pad(now.getMonth() + 1);
-            const day = pad(now.getDate());
-            const hours = pad(now.getHours());
-            const minutes = pad(now.getMinutes());
-            const seconds = pad(now.getSeconds());
+      const year = now.getFullYear();
+      const month = pad(now.getMonth() + 1);
+      const day = pad(now.getDate());
+      const hours = pad(now.getHours());
+      const minutes = pad(now.getMinutes());
+      const seconds = pad(now.getSeconds());
 
-            // 中间时间
-            const centerClockString = `${year}年${month}月${day}日 ${hours}:${minutes}:${seconds}`;
-            document.getElementById('center-clock').textContent = centerClockString;
+      document.getElementById("center-clock").textContent =
+        `${year}年${month}月${day}日 ${hours}:${minutes}:${seconds}`;
 
-            // 左下角日期
-            const bottomLeftDateString = `${month}-${day}`;
-            document.getElementById('bottom-left-date').textContent = bottomLeftDateString;
-        }
+      document.getElementById("bottom-left-date").textContent = `${month}-${day}`;
+    }
 
-        updateTime();
-        setInterval(updateTime, 1000);
-    </script>
-
+    updateTime();
+    setInterval(updateTime, 1000);
+  </script>
 </body>
-
 </html>
-
-
