--- a/index.html
+++ b/index.html
@@ -1,87 +1,134 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <title>实时进校码</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>实时进校码</title>
 
-  <!-- iOS 全屏支持 -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="进校码" />
-  <link rel="apple-touch-icon" href="./jinxiaoma.png" />
+    <!-- PWA 全屏与图标支持 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="进校码">
+    <link rel="apple-touch-icon" href="./jinxiaoma.png">
 
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background-color: #0b4da2; /* 蓝色防止黑边 */
-    }
+    <style>
+        /* ========== 全屏基础设置 ========== */
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            background-color: black;
+            
+            /* iPhone Safari 全屏安全区适配 */
+            padding-top: env(safe-area-inset-top);
+            padding-bottom: env(safe-area-inset-bottom);
+            padding-left: env(safe-area-inset-left);
+            padding-right: env(safe-area-inset-right);
+        }
 
-    #background-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-image: url('./jinxiaoma.png');
-      background-repeat: no-repeat;
-      background-size: contain; /* 保证完整显示 */
-      background-position: center center; /* 默认居中 */
-      background-color: #0b4da2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+        /* ========== 背景容器 ========== */
+        #background-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
 
-    .content-wrapper {
-      width: 100%;
-      height: 100%;
-      max-width: 450px;
-      position: relative;
-    }
+            background-image: url('./jinxiaoma.png');
+            background-size: contain; /* 或 cover，根据是否希望图片铺满裁剪 */
+            background-repeat: no-repeat;
+            background-position: center;
+            background-color: #000; /* 边缘颜色与图片融合 */
 
-    #center-clock {
-      position: absolute;
-      top: 47%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: black;
-      font-size: 1.4rem;
-      font-weight: bold;
-      text-align: center;
-      white-space: nowrap;
-    }
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    #bottom-left-date {
-      position: absolute;
-      bottom: 6.2%;
-      left: 40%;
-      transform: translate(-50%, -50%);
-      color: white;
-      font-size: 1.1rem;
-      font-weight: 500;
-      white-space: nowrap;
-    }
-  </style>
+        /* 内容容器（文字定位区） */
+        .content-wrapper {
+            width: 100%;
+            height: 100%;
+            max-width: 450px;
+            position: relative;
+        }
+
+        /* ========== 中间时间文字 ========== */
+        #center-clock {
+            position: absolute;
+            top: 47%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: black;
+            font-size: 1.4rem;
+            font-weight: bold;
+            text-align: center;
+            white-space: nowrap;
+        }
+
+        /* ========== 左下角日期 ========== */
+        #bottom-left-date {
+            position: absolute;
+            bottom: 6.2%;
+            left: 40%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 1.1rem;
+            font-weight: 500;
+            white-space: nowrap;
+        }
+
+        /* iPhone Safari 横屏安全区适配 */
+        @supports (padding: max(0px)) {
+            body {
+                padding-top: max(env(safe-area-inset-top), 0px);
+                padding-bottom: max(env(safe-area-inset-bottom), 0px);
+                padding-left: max(env(safe-area-inset-left), 0px);
+                padding-right: max(env(safe-area-inset-right), 0px);
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <div id="background-container">
-    <div class="content-wrapper">
-      <div id="center-clock"></div>
-      <div id="bottom-left-date"></div>
-    </div>
-  </div>
 
-  <script>
-    // ===== 动态设置视口真实高度，避免 iOS 底部黑边 =====
-    function setFullHeight() {
-      const vh = window.innerHeight * 0.01;
-      document.getElementById('background-container').style.height = `${vh * 100}px`;
-    }
-    window.addEventListener('resize', setFullHeight);
-    window.addEventListener('
+    <div id="background-container">
+        <div class="content-wrapper">
+            <div id="center-clock"></div>
+            <div id="bottom-left-date"></div>
+        </div>
+    </div>
+
+    <script>
+        function updateTime() {
+            const now = new Date();
+            const pad = (num) => num.toString().padStart(2, '0');
+
+            const year = now.getFullYear();
+            const month = pad(now.getMonth() + 1);
+            const day = pad(now.getDate());
+            const hours = pad(now.getHours());
+            const minutes = pad(now.getMinutes());
+            const seconds = pad(now.getSeconds());
+
+            // 中间时间
+            const centerClockString = `${year}年${month}月${day}日 ${hours}:${minutes}:${seconds}`;
+            document.getElementById('center-clock').textContent = centerClockString;
+
+            // 左下角日期
+            const bottomLeftDateString = `${month}-${day}`;
+            document.getElementById('bottom-left-date').textContent = bottomLeftDateString;
+        }
+
+        updateTime();
+        setInterval(updateTime, 1000);
+    </script>
+
+</body>
+
+</html>
