Refactor index.html for improved iOS support
Updated the layout and styles for better display on iOS devices, including full-screen support and dynamic height adjustment.

--- a/index.html
+++ b/index.html
@@ -1,73 +1,47 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
   <title>实时进校码</title>
 
-  <!-- PWA 全屏与图标支持 -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="进校码">
-  <link rel="apple-touch-icon" href="./jinxiaoma.png">
+  <!-- iOS 全屏支持 -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="进校码" />
+  <link rel="apple-touch-icon" href="./jinxiaoma.png" />
 
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
       width: 100%;
+      height: 100%;
       overflow: hidden;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background-color: black;
-
-      padding-top: env(safe-area-inset-top);
-      padding-bottom: env(safe-area-inset-bottom);
-      padding-left: env(safe-area-inset-left);
-      padding-right: env(safe-area-inset-right);
+      background-color: #0b4da2; /* 背景与图像外框一致 */
     }
 
     /* 背景容器 */
     #background-container {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
-      right: 0;
-      bottom: 0;
-
+      width: 100%;
       background-image: url('./jinxiaoma.png');
-      background-size: contain;
       background-repeat: no-repeat;
-      background-position: center;
-      background-color: #000;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-size: contain;      /* 保证图片完整显示 */
+      background-position: center bottom; /* ✅ 关键：图片底部对齐 */
+      background-color: #0b4da2;
     }
 
     .content-wrapper {
+      position: relative;
       width: 100%;
       height: 100%;
       max-width: 450px;
-      position: relative;
     }
 
-    /* 顶部黑底条 */
-    #top-bar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: calc(env(safe-area-inset-top) + 40px);
-      background-color: rgba(0, 0, 0, 0.65);
-      backdrop-filter: blur(6px);
-      z-index: 10;
-    }
-
-    /* 中间时间文字 */
     #center-clock {
       position: absolute;
       top: 47%;
@@ -80,7 +54,6 @@
       white-space: nowrap;
     }
 
-    /* 左下角日期 */
     #bottom-left-date {
       position: absolute;
       bottom: 6.2%;
@@ -91,21 +64,11 @@
       font-weight: 500;
       white-space: nowrap;
     }
-
-    @supports (padding: max(0px)) {
-      body {
-        padding-top: max(env(safe-area-inset-top), 0px);
-        padding-bottom: max(env(safe-area-inset-bottom), 0px);
-        padding-left: max(env(safe-area-inset-left), 0px);
-        padding-right: max(env(safe-area-inset-right), 0px);
-      }
-    }
   </style>
 </head>
 
 <body>
   <div id="background-container">
-    <div id="top-bar"></div> <!-- 新增黑底条 -->
     <div class="content-wrapper">
       <div id="center-clock"></div>
       <div id="bottom-left-date"></div>
@@ -113,6 +76,35 @@
   </div>
 
   <script>
+    // === 关键：动态计算真实窗口高度（防止底部黑边） ===
+    function setFullHeight() {
+      const vh = window.innerHeight * 0.01;
+      document.getElementById('background-container').style.height = `${vh * 100}px`;
+    }
+    window.addEventListener('resize', setFullHeight);
+    window.addEventListener('orientationchange', setFullHeight);
+    setFullHeight();
+
+    // === 实时时间显示 ===
     function updateTime() {
       const now = new Date();
-      const pad = (num) => num.to
+      const pad = (n) => n.toString().padStart(2, "0");
+
+      const year = now.getFullYear();
+      const month = pad(now.getMonth() + 1);
+      const day = pad(now.getDate());
+      const hours = pad(now.getHours());
+      const minutes = pad(now.getMinutes());
+      const seconds = pad(now.getSeconds());
+
+      document.getElementById("center-clock").textContent =
+        `${year}年${month}月${day}日 ${hours}:${minutes}:${seconds}`;
+
+      document.getElementById("bottom-left-date").textContent = `${month}-${day}`;
+    }
+
+    updateTime();
+    setInterval(updateTime, 1000);
+  </script>
+</body>
+</html>
