Modify background color and enhance iOS support
Updated background color and ensured proper display on iOS devices.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       background-repeat: no-repeat;
       background-size: cover;          /* ✅ 铺满，裁掉上边黑边 */
       background-position: center bottom; /* ✅ 底部对齐 */
-      background-color: #0b4da2;
+      background-color: #599adc;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -112,6 +112,7 @@
   </script>
 </body>
 </html>
+
 
 
 
